--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "trab_rotas",
   "version": "0.1.0",
-  "homepage": "./build/index.html",
+  "homepage": "https://fabriciorangel07.github.io/projeto-rotas-neto/build/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
@@ -14,6 +14,7 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
+    "deploy": "npm run build && ./node.modules/.bin/projeto-rotas-neto -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
