--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "trab_rotas",
   "version": "0.1.0",
-  "homepage": "https://fabriciorangel07.github.io/projeto-rotas-neto/build/",
   "private": true,
+  "homepage": "./build/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -14,7 +14,8 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "deploy": "npm run build && ./node.modules/.bin/projeto-rotas-neto -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
