--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "trab_rotas",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://fabriciorangel07.github.io/projeto-rotas-neto/build/index.html",
+  "homepage": "./",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
