--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "trab_rotas",
   "version": "0.1.0",
-  "homepage": "./",
+  "homepage": "git-hub-page/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
