--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "trab_rotas",
   "version": "0.1.0",
-  "homepage": "https://fabriciorangel07.github.io/projeto-rotas-neto/",
-  "private": true,
+  "homepage": "projeto-rotas-neto/",
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
