--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "trab_rotas",
   "version": "0.1.0",
   "homepage": "https://fabriciorangel07.github.io/projeto-rotas-neto/",
-  "private": false,
+  "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
